<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:id="@+id/registerMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/registerImageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:src="@drawable/game_time" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/registerEditTextUser"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/registerUser"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/registerEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/registerPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/repeatEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/repeatPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/repeatChangeTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/repeatPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <Button
                    android:id="@+id/regActRegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/btn_style"
                    android:fontFamily="sans-serif-light"
                    android:onClick="addNewUser"
                    android:text="@string/regActregister"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/changeRegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/btn_style"
                    android:fontFamily="sans-serif-light"
                    android:onClick="notifyChanges"
                    android:text="@string/changePasswordText"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/changePasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/btn_style"
                    android:fontFamily="sans-serif-light"
                    android:onClick="changePassword"
                    android:text="@string/changePasswordTextHidden"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="25dp" />


            </LinearLayout>
        </ScrollView>


        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="by Franco Peri"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </LinearLayout>
</LinearLayout>