<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:src="@drawable/game_time" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextUser"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="9"
                    android:background="@drawable/edt_style"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="10"
                    android:background="@drawable/btn_style"
                    android:fontFamily="sans-serif-light"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="20"
                    android:background="@drawable/btn_style"
                    android:fontFamily="sans-serif-light"
                    android:onClick="register"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="25dp" />

            </LinearLayout>

        </ScrollView>


        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="by Franco Peri"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>
</LinearLayout>