<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainImageMainActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:src="@drawable/game_zone" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:fontFamily="@font/varino"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#E85EE6"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="to2048Activity"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2048"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nameFirstGame"
                    android:textColor="#E85EE6"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2048"
                    android:layout_width="50dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/game" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="toPegActivity"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPEG"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nameSecondGame"
                    android:textColor="#E85EE6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewPEG"
                    android:layout_width="50dp"
                    android:layout_height="139dp"
                    android:layout_weight="1"
                    android:src="@drawable/peg_solitaire" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="toSettingsActivity"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewSettings"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="#E85EE6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewSettings"
                    android:layout_width="50dp"
                    android:layout_height="139dp"
                    android:layout_weight="1"
                    android:src="@drawable/settings" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
